--- a/Car_Rent/Pages/Shared/_Layout.cshtml
+++ b/Car_Rent/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Cars/Index">Адмінка (Авто)</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
+                        </li>
                     </ul>
+
+
                 </div>
             </div>
         </nav>
